// Vitest Snapshot v1

exports[`TopFiveChart.vue > matches snapshot with malformed data 1`] = `
"<div data-id=\\"sds-top-five-chart\\" class=\\"space-y-4 chart\\">
  <h3 class=\\"text-2xl font-bold\\">Top Five Chart (malformed data)</h3>
  <div>
    <p>The chart data is malformed and cannot be displayed at this time.</p>
  </div>
</div>"
`;

exports[`TopFiveChart.vue > matches snapshot with no data 1`] = `
"<div data-id=\\"sds-top-five-chart\\" class=\\"space-y-4 chart\\">
  <h3 class=\\"text-2xl font-bold\\">Top Five Chart (no data)</h3>
  <div>
    <p>There is no chart data to display at this time.</p>
  </div>
</div>"
`;

exports[`TopFiveChart.vue > matches snapshot with no props assigned 1`] = `
"<div data-id=\\"sds-top-five-chart\\" class=\\"space-y-4 chart\\">
  <h3 class=\\"text-2xl font-bold\\"></h3>
  <div>
    <p>There is no chart data to display at this time.</p>
  </div>
</div>"
`;

exports[`TopFiveChart.vue > matches snapshot with no urls 1`] = `
"<div data-id=\\"sds-top-five-chart\\" class=\\"space-y-4 chart\\">
  <h3 class=\\"text-2xl font-bold\\">Top Five Chart (no urls)</h3>
  <div>
    <ul class=\\"space-y-6\\">
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-orange-900\\" role=\\"progressbar\\" title=\\"40\\" aria-valuenow=\\"40\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 100%;\\"><span class=\\"sr-only\\">40 Test 1</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">40 · <a href=\\"#\\" class=\\"hover:underline focus:underline focus:outline-none\\">Test 1</a></div>
          </div>
        </div>
      </li>
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-orange-700\\" role=\\"progressbar\\" title=\\"30\\" aria-valuenow=\\"30\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 75%;\\"><span class=\\"sr-only\\">30 Test 2</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">30 · <a href=\\"#\\" class=\\"hover:underline focus:underline focus:outline-none\\">Test 2</a></div>
          </div>
        </div>
      </li>
      <!---->
    </ul>
  </div>
</div>"
`;

exports[`TopFiveChart.vue > matches snapshot with urls 1`] = `
"<div data-id=\\"sds-top-five-chart\\" class=\\"space-y-4 chart\\">
  <h3 class=\\"text-2xl font-bold\\">Top Five Chart (with urls, view all url, showPercent)</h3>
  <div>
    <ul class=\\"space-y-6\\">
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-blue-900\\" role=\\"progressbar\\" title=\\"40\\" aria-valuenow=\\"40\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 100%;\\"><span class=\\"sr-only\\">40% Test 1</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">40% · <a href=\\"https://seinet.sei.cmu.edu\\" class=\\"hover:underline focus:underline focus:outline-none\\">Test 1</a></div>
          </div>
        </div>
      </li>
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-blue-700\\" role=\\"progressbar\\" title=\\"30\\" aria-valuenow=\\"30\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 75%;\\"><span class=\\"sr-only\\">30% Test 2</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">30% · <a href=\\"https://seinet.sei.cmu.edu\\" class=\\"hover:underline focus:underline focus:outline-none\\">Test 2</a></div>
          </div>
        </div>
      </li>
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-blue-500\\" role=\\"progressbar\\" title=\\"15\\" aria-valuenow=\\"15\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 37.5%;\\"><span class=\\"sr-only\\">15% Test 3</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">15% · <a href=\\"https://seinet.sei.cmu.edu\\" class=\\"hover:underline focus:underline focus:outline-none\\">Test 3</a></div>
          </div>
        </div>
      </li>
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-blue-300\\" role=\\"progressbar\\" title=\\"10\\" aria-valuenow=\\"10\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 25%;\\"><span class=\\"sr-only\\">10% Test 4</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">10% · <a href=\\"https://seinet.sei.cmu.edu\\" class=\\"hover:underline focus:underline focus:outline-none\\">Test 4</a></div>
          </div>
        </div>
      </li>
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-blue-100\\" role=\\"progressbar\\" title=\\"3\\" aria-valuenow=\\"3\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 7.5%;\\"><span class=\\"sr-only\\">3% Test 5</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">3% · <a href=\\"https://seinet.sei.cmu.edu\\" class=\\"hover:underline focus:underline focus:outline-none\\">Test 5</a></div>
          </div>
        </div>
      </li>
      <li class=\\"mt-4\\"><a href=\\"https://seinet.sei.cmu.edu\\" class=\\"link link-primary link-cta\\"> View All </a></li>
    </ul>
  </div>
</div>"
`;

exports[`TopFiveChart.vue > matches snapshot with urls, doNotLinkEntries 1`] = `
"<div data-id=\\"sds-top-five-chart\\" class=\\"space-y-4 chart\\">
  <h3 class=\\"text-2xl font-bold\\">Top Five Chart (with urls, doNotLinkEntries)</h3>
  <div>
    <ul class=\\"space-y-6\\">
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-blue-900\\" role=\\"progressbar\\" title=\\"40\\" aria-valuenow=\\"40\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 100%;\\"><span class=\\"sr-only\\">40 Test 1</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">40 · <span>Test 1</span></div>
          </div>
        </div>
      </li>
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-blue-700\\" role=\\"progressbar\\" title=\\"30\\" aria-valuenow=\\"30\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 75%;\\"><span class=\\"sr-only\\">30 Test 2</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">30 · <span>Test 2</span></div>
          </div>
        </div>
      </li>
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-blue-500\\" role=\\"progressbar\\" title=\\"15\\" aria-valuenow=\\"15\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 37.5%;\\"><span class=\\"sr-only\\">15 Test 3</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">15 · <span>Test 3</span></div>
          </div>
        </div>
      </li>
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-blue-300\\" role=\\"progressbar\\" title=\\"10\\" aria-valuenow=\\"10\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 25%;\\"><span class=\\"sr-only\\">10 Test 4</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">10 · <span>Test 4</span></div>
          </div>
        </div>
      </li>
      <li>
        <div class=\\"flex\\">
          <div class=\\"flex-grow\\">
            <div class=\\"mb-2\\">
              <div class=\\"h-6 mr-2 rounded bg-blue-100\\" role=\\"progressbar\\" title=\\"3\\" aria-valuenow=\\"3\\" aria-valuemin=\\"0\\" aria-valuemax=\\"40\\" style=\\"width: 7.5%;\\"><span class=\\"sr-only\\">3 Test 5</span></div>
            </div>
            <div class=\\"text-sm font-semibold chart-label-section\\">3 · <span>Test 5</span></div>
          </div>
        </div>
      </li>
      <!---->
    </ul>
  </div>
</div>"
`;
